--- a/weather.html
+++ b/weather.html
@@ -17,23 +17,28 @@
           Taipei <span class="caret"></span>
         </button>
         <ul id="dropdown" class="dropdown-menu" role="menu">
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">台北市</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="0" href="#">台南市</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="1" href="#">花蓮線</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="2" href="#">台東縣</a></li>
-      			  <li role="presentation"><a role="menuitem" tabindex="3" href="#">新北市</a></li>
-      			  <li role="presentation"><a role="menuitem" tabindex="4" href="#">高雄市</a></li>
-      			  <li role="presentation"><a role="menuitem" tabindex="5" href="#">台中市</a></li>
-      			  <li role="presentation"><a role="menuitem" tabindex="7" href="#">基隆縣</a></li>
-      			  <li role="presentation"><a role="menuitem" tabindex="8" href="#">新竹縣</a></li>
-      			  <li role="presentation"><a role="menuitem" tabindex="9" href="#">苗栗縣</a></li>
-      			  <li role="presentation"><a role="menuitem" tabindex="10" href="#">彰化市</a></li>
-      			  <li role="presentation"><a role="menuitem" tabindex="11" href="#">南投縣</a></li>
-      			  <li role="presentation"><a role="menuitem" tabindex="12" href="#">嘉義縣</a></li>
-      			  <li role="presentation"><a role="menuitem" tabindex="13" href="#">屏東縣</a></li>
-      			  <li role="presentation"><a role="menuitem" tabindex="14" href="#">宜蘭縣</a></li>
-      			  <li role="presentation"><a role="menuitem" tabindex="15" href="#">澎湖縣</a></li>
-      			  <li role="presentation"><a role="menuitem" tabindex="14" href="#">桃園區</a></li>
+              <li role="presentation" id="Taipei"><a role="menuitem" tabindex="-1" href="#">台北市</a></li>
+              <li role="presentation" id="New Taipei"><a role="menuitem" tabindex="-1" href="#">新北市</a></li>
+              <li role="presentation" id="Taoyuan District"><a role="menuitem" tabindex="-1" href="#">桃園市</a></li>
+              <li role="presentation" id="Hsinchu City"><a role="menuitem" tabindex="-1" href="#">新竹市</a></li>
+              <li role="presentation" id="Hsinchu County"><a role="menuitem" tabindex="-1" href="#">新竹縣</a></li>
+              <li role="presentation" id="Miaoli County"><a role="menuitem" tabindex="-1" href="#">苗栗縣</a></li>
+              <li role="presentation" id="Taichung"><a role="menuitem" tabindex="-1" href="#">台中市</a></li>
+              <li role="presentation" id="Changhua County"><a role="menuitem" tabindex="-1" href="#">彰化縣</a></li>
+              <li role="presentation" id="Yunlin County"><a role="menuitem" tabindex="-1" href="#">雲林縣</a></li>
+              <li role="presentation" id="Chiayi County"><a role="menuitem" tabindex="-1" href="#">嘉義縣</a></li>
+              <li role="presentation" id="Chiayi City"><a role="menuitem" tabindex="-1" href="#">嘉義市</a></li>
+              <li role="presentation" id="Nantou County"><a role="menuitem" tabindex="-1" href="#">南投縣</a></li>
+              <li role="presentation" id="Tainan"><a role="menuitem" tabindex="-1" href="#">台南市</a></li>
+              <li role="presentation" id="Kaohsiung"><a role="menuitem" tabindex="-1" href="#">高雄市</a></li>
+              <li role="presentation" id="Pingtung County"><a role="menuitem" tabindex="-1" href="#">屏東縣</a></li>
+              <li role="presentation" id="Taidong"><a role="menuitem" tabindex="-1" href="#">台東縣</a></li>
+              <li role="presentation" id="Hualien"><a role="menuitem" tabindex="-1" href="#">花蓮縣</a></li>
+              <li role="presentation" id="Yilan County"><a role="menuitem" tabindex="-1" href="#">宜蘭縣</a></li>
+              <li role="presentation" id="Keelung"><a role="menuitem" tabindex="-1" href="#">基隆市</a></li>
+              <li role="presentation" id="Penghu County"><a role="menuitem" tabindex="-1" href="#">澎湖縣</a></li>
+              <li role="presentation" id="Kinmen County"><a role="menuitem" tabindex="-1" href="#">金門縣</a></li>
+              <li role="presentation" id="Lianjiang County"><a role="menuitem" tabindex="-1" href="#">連江縣</a></li>
         </ul>
       </div>
       <div><span class="temperature"></span> &#8451;</div>
